# pickled_dict

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: Semantic.yml  publish-poetry.yml  publish.yml  pythonpackage.yml
ndarray_to_db/: __init__.py  main.py
pickled_dict/: PickledDict.py  PickledDict2.py  __init__.py
pickled_dict.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_PickledDict.py  test_PickledDict2.py  test_pickled_dict.py
