[tool.poetry]
name = "pickled_dict"
version = "0.1.5"
license = "MIT"
description = "A persistant Dictionary saved as file"
authors = ["David <dbrielbeck@gmail.com>"]
repository='https://github.com/Daveismus/pickled_dict'
keywords=['pickle', 'dict', 'peristant']
exclude = [".gitignore"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release] 
version_variable = "pickled_dict/__init__.py:__version_"